Made it so E. woodii trees generate naturally, added Chocolate Cosmos flower, added dev_tools folder for (mainly python) tools to aid in development, added missing blockbench models to the models folder, and also did some tweaks here and there that I forgot.

--- a/architectury/common/src/main/resources/assets/onthebrink/lang/en_us.json
+++ b/architectury/common/src/main/resources/assets/onthebrink/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.onthebrink.ruby": "Ruby",
   "block.onthebrink.ruby_ore": "Ruby Ore",
 
+  "block.onthebrink.chocolate_cosmos": "Chocolate Cosmos",
   "block.onthebrink.woods_cycad_leaves": "Wood's Cycad Leaves",
   "block.onthebrink.woods_cycad_sprout": "Wood's Cycad Sprout",
   "block.onthebrink.woods_cycad_log": "Wood's Cycad Log",
