Basic Book GUI and Screen - Must calculate columns and rows - Wait for finalize book Screen - Called Animal Book Temporarily

--- a/architechtury/common/src/main/resources/assets/onthebrink/lang/en_us.json
+++ b/architechtury/common/src/main/resources/assets/onthebrink/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.onthebrink.penguin_temp_spawn_egg": "Penguin Temp Spawn Egg"
+  "item.onthebrink.penguin_temp_spawn_egg": "Penguin Temp Spawn Egg",
+  "item.onthebrink.animal_book": "Animal Book"
 }
